--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <style>
         body {
             margin: 0;
-            padding: 0;
+            padding: 5px;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            height : 100vh;
+            width : 100%;
             background-color: #0a192f;
             font-family: Arial, sans-serif;
         }
@@ -27,8 +29,8 @@
             padding: 40px;
             border-radius: 10px;
             border: 2px solid #1e90ff;
-              width: 90%;
-  max-width: 320px;
+            width: 90%;
+            max-width: 320px;
             text-align: center;
         }
 
