--- a/index.html
+++ b/index.html
@@ -68,16 +68,7 @@
             font-size: 14px;
         }
 
-        .close-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            color: white;
-            font-size: 24px;
-            cursor: pointer;
-            background: none;
-            border: none;
-        }
+   
 
         i {
             color: white;
@@ -90,14 +81,17 @@
           }
           .container{
             width: 100%;
-            height: 80vh;
+            height: 70vh;
+          }
+                      .coming-soon {
+            font-size: 12px;
+            margin-top: 350px;
           }
         }
         
     </style>
 </head>
 <body>
-    <button class="close-btn">×</button>
     <div class="container">
         <h1>Create an account</h1>
         
