--- a/login/index.html
+++ b/login/index.html
@@ -26,8 +26,7 @@ body {
   border: 2px solid #1e90ff;
   border-radius: 8px;
   background: transparent;
-  width: 90%;
-  max-width: 380px;
+  width: 380px;
 }
 
 .avatar {
@@ -104,9 +103,12 @@ label input {
     width: 90%;
 
 }
-@media (max-width:600px) {
+@media (max-width:500px) {
+
     .login-container{
-        max-width: 90%;
+        width: 500px;
+        width: 90%;
+        height: 50%;
     }
 }
 
