--- a/login/index.html
+++ b/login/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Account</title>
   <style>
     * {
@@ -16,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  width: 100%;
   height: 100vh;
 }
 
